# local-ddns-updater

./: Cargo.toml  README.md  local-ddns-updater@.service
local-ddns-updater/: nsupdate.sh
src/: helper.rs  main.rs
